--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,7 @@
 {
     "python.pythonPath": "venv/bin/python",
+    "python.autoComplete.addBrackets": true,
+    "python.analysis.autoImportCompletions": true,
     "editor.formatOnSave": true,
     "python.formatting.provider": "autopep8",
     "python.linting.enabled": true,
@@ -10,4 +12,5 @@
         "**/templates/**/*": "django-txt",
         "**/requirements{/**,*}.{txt,in}": "pip-requirements"
     },
+    "python.analysis.completeFunctionParens": true,
 }
